# faith-dive

./: .env.template  .gitignore  DATABASE_FIXES.md  MULTILINGUAL_SUPPORT.md  Makefile  README.md  TESTING.md  TESTING_STRATEGY.md  WARP.md  alembic.ini  analyze_bible_languages.py  build_frontend.py  pyproject.toml  pytest.ini  run.py  sync_frontend.sh  test_weekly_studies.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_initial_tables.py
backend/: main.py
backend/core/: config.py
backend/database/: connection.py
backend/models/: database.py  schemas.py
backend/services/: bible_api.py  study_scheduler.py
frontend/public/: app.js  index.html  manifest.json  sw.js
scripts/: pre_commit_tests.py  run_tests.py
tests/: conftest.py  test_bible_endpoints.py  test_favorites_endpoints.py  test_frontend_integration.py  test_health.py  test_journal_endpoints.py  test_models.py  test_performance.py  test_services.py  test_verse_reference_integration.py
